# move-stylus

./: .env.example  .gitignore  AI_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  asd  output.txt  update_contract_env.sh
crates/move-bytecode-to-wasm/: Cargo.toml
crates/move-bytecode-to-wasm/src/: abi_types.rs  compilation_context.rs  constructor.rs  data.rs  error.rs  error_encoding.rs  error_handling.rs  generics.rs  hasher.rs  hostio.rs  lib.rs  memory.rs  native_functions.rs  runtime.rs  runtime_error_codes.rs  storage.rs  test_tools.rs  translation.rs  utils.rs  vm_handled_types.rs  wasm_builder_extension.rs  wasm_builder_extensions.rs  wasm_helpers.rs  wasm_validation.rs
crates/move-bytecode-to-wasm/src/abi_types/: abi_encoding.rs  error.rs  error_encoding.rs  event_encoding.rs  function_encoding.rs  hashing.rs  packing.rs  public_function.rs  sol_name.rs  unpacking.rs  vm_handled_datatypes.rs
crates/move-bytecode-to-wasm/src/compilation_context/: error.rs  globals.rs  module_data.rs  reserved_modules.rs
crates/move-bytecode-to-wasm/src/hostio/: entrypoint_router.rs  error.rs  host_functions.rs  host_test_functions.rs
crates/move-bytecode-to-wasm/src/native_functions/: Untitled  abi_error.rs  account.rs  bytes.rs  contract_calls.rs  dynamic_field.rs  error.rs  event.rs  fallback.rs  object.rs  peep.rs  storage.rs  string.rs  string.rs.bak  tests.rs  transaction.rs  transfer.rs  type_name.rs  types.rs  unit_test.rs
crates/move-bytecode-to-wasm/src/runtime/: abi.rs  copy.rs  enums.rs  equality.rs  error.rs  integers.rs  integers_add.rs  integers_bitwise.rs  packing.rs  storage.rs  string.rs  swap.rs  test_tools.rs  unpacking.rs  vector.rs
crates/move-bytecode-to-wasm/src/storage/: common.rs  decode.rs  decoding.rs  encode.rs  encoding.rs  error.rs  read.rs  reserved_slots.rs  save.rs  storage_layout.rs
crates/move-bytecode-to-wasm/src/translation/: bytecodes.rs  error.rs  flow.rs  functions.rs  intermediate_types.rs  table.rs  types_stack.rs
crates/move-bytecode-to-wasm/src/vm_handled_types/: bytes.rs  contract_call_result.rs  dynamic_fields.rs  error.rs  fallback.rs  id.rs  named_id.rs  signer.rs  storage_object.rs  string.rs  table.rs  tx_context.rs  uid.rs
crates/move-bytecode-to-wasm/tests/: comparisons.rs  constructor.rs  control-flow.rs  dependencies.rs  enums.rs  framework.rs  generic_functions.rs  imports.rs  integration_test.rs  lib.rs  native.rs  operations-bitwise.rs  operations-cast.rs  operations-equality.rs  primitive-operations.rs  primitives.rs  receive.rs  references.rs  stdlib.rs  storage.rs  structs.rs  structs.rs.bak
crates/move-bytecode-to-wasm/tests/common/: mod.rs
crates/move-bytecode-to-wasm/tests/constructor/: constructor.move  constructor.rs  constructor_bad_args.rs  constructor_bad_args_1.move  constructor_bad_args_2.move  constructor_bad_args_3.move  constructor_bad_args_4.move  constructor_bad_args_5.move  constructor_with_otw.move  constructor_with_otw.rs  constructor_with_return.move  constructor_with_return.rs  mod.rs
crates/move-bytecode-to-wasm/tests/control-flow/: control_flow.move  control_flow_u64.move  control_flow_u8.move
crates/move-bytecode-to-wasm/tests/control_flow/: control_flow_u64.rs  control_flow_u8.rs  mod.rs
crates/move-bytecode-to-wasm/tests/dependencies/: another_mod.move  main.move  mod.rs  other_mod.move
crates/move-bytecode-to-wasm/tests/enums/: abi_packing_unpacking.rs  elements_experiment.move  enum_abi_packing_unpacking.move  enum_match.move  enum_with_fields.move  enums_abi_packing_unpacking.rs  enums_control_flow.move  enums_control_flow.rs  enums_generic_enums.rs  enums_geometry.rs  enums_lab_experiment.rs  enums_magical_creatures.rs  enums_stars.rs  generic_enums.move  (+8 more)
crates/move-cli/: Cargo.toml
crates/move-cli/src/: base.rs  build_config.rs  dependencies.rs  error.rs  lib.rs  main.rs
crates/move-evm-abi-generator/: Cargo.toml
crates/move-evm-abi-generator/src/: abi.rs  common.rs  error.rs  function_modifiers.rs  human_readable.rs  human_redable.rs  json_format.rs  lib.rs  special_types.rs  types.rs
crates/move-evm-abi-generator/tests/: revert_errors.move  test.rs
crates/move-test-runner/: Cargo.toml
crates/move-test-runner/src/: constants.rs  lib.rs  wasm_runner.rs
example/: Cargo.toml  Move.toml  README.md
example/doc/hello_world/: another_mod.md  counter.md  counter_named_id.md  counter_with_init.md  cross_contract_call.md  delegated_counter.md  delegated_counter_interface.md  delegated_counter_logic_1.md  delegated_counter_logic_2.md  delegated_counter_named_id.md  delegated_counter_named_id_interface.md  delegated_counter_named_id_logic_1.md  delegated_counter_named_id_logic_2.md  dog_walker.md  erc20.md  hello_world.md  hello_world_2.md  other_mod.md  primitives_and_operations.md  revert_errors.md  stack.md
example/scripts/: counter.rs  counter_named_id.rs  counter_with_init.rs  cross_contract_call.rs  delegated_counter.rs  delegated_counter_named_id.rs  dog_walker.rs  erc20.rs  erc20_r.rs  erc721.rs  events.rs  features_2.rs  interaction.rs  interaction_2.rs  modified_counter.rs  primitives_and_operations.rs  revert_errors.rs  todo_list.rs
example/sources/: another_mod.move  counter.move  counter_named_id.move  counter_with_init.move  cross_contract_call.move  delegated_counter.move  delegated_counter_interface.move  delegated_counter_logic_1.move  delegated_counter_logic_2.move  delegated_counter_named_id.move  delegated_counter_named_id_interface.move  delegated_counter_named_id_logic_1.move  delegated_counter_named_id_logic_2.move  dog_walker.move  enums.move  erc20.move  erc20.move.bakbak  erc721.move  erc721_receiver.move  events.move  features_2.move  generic_struct_defs.move  hello_world.move  hello_world_2.move  modified_counter.move  other_mod.move  primitives_and_operations.move  revert_errors.move  simple_counter.move  special_functions.move  stack.move  string_utf8.move  struct.sol  test_json.move  todo_list.move  trusted_swap.move
example/sources/output/: Echo.abi
example/sources_bak/: erc20.move
(+647 files in other folders)
