[package]
name = "move-bytecode-to-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
move-package.workspace = true
move-binary-format.workspace = true

alloy-primitives = "1.0.0"
alloy-sol-types = { version = "1.0.0", features = ["json"] }
walrus = "0.23"
wasmprinter = "0.228"
wasmparser = "0.228"
thiserror = "2"

[dev-dependencies]
wasmtime = "31.0.0"
move-packages-build.workspace = true
rstest = "0.25.0"


[features]
inject-host-debug-fns = []
