[package]
name = "move-bytecode-to-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
move-package.workspace = true
move-binary-format.workspace = true
move-abstract-interpreter.workspace = true
move-core-types.workspace = true
move-parse-special-attributes.workspace = true
move-compiler.workspace = true

alloy-primitives = "1.0.0"
alloy-sol-types = "1.0.0"
walrus = "0.23"
wasmparser = "0.228"
thiserror = "2"
relooper = "0.1.0"
hashers = "1.0.1"

[dev-dependencies]
anyhow.workspace = true
move-packages-build.workspace = true
wasmprinter.workspace = true
rstest = "0.25.0"
wasmtime = "31.0.0"

[features]
inject-host-debug-fns = []

# TODO: Remove this after finishing error handling
[lints.clippy]
result_large_err = "allow"
large_enum_variant = "allow"
