[package]
name = "move-cli"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "CLI frontend for the Move compiler and VM"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
move-bytecode-source-map.workspace = true
move-disassembler.workspace = true
move-docgen.workspace = true
move-command-line-common.workspace = true
move-coverage.workspace = true
move-core-types.workspace = true
move-compiler.workspace = true
move-stdlib-natives.workspace = true
move-vm-runtime.workspace = true
move-vm-test-utils.workspace = true
move-binary-format.workspace = true
move-package.workspace = true
move-unit-test.workspace = true
move-bytecode-viewer.workspace = true
move-abstract-interpreter.workspace = true
move-bytecode-to-wasm.workspace = true
move-packages-build.workspace = true
move-evm-abi-generator.workspace = true
move-test-runner.workspace = true
wasm-opt = "0.116.1"
wasmprinter.workspace = true
walrus = "0.23"

[[bin]]
name = "move"
path = "src/main.rs"
