[package]
name = "move-test-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
move-bytecode-to-wasm.workspace = true
anyhow.workspace = true
move-packages-build.workspace = true
wasmprinter.workspace = true
walrus.workspace = true
rstest = "0.25.0"
wasmtime = "31.0.0"
alloy-primitives = "1.0.0"

